@@ -1928,19 +1928,18 @@ able to use the transport. The default encoding is set to "iso8859-15".
   ...
  ]}.
 </PRE></LI><LI CLASS="li-itemize">In next example the IRC transport is available with JIDs with prefix <TT>irc-t.net</TT>.
-Moreover, the transport is only accessible by paying customers registered on
-our domains and on other servers.
-<PRE CLASS="verbatim">{acl, paying_customers, {user, "customer1", "example.net"}}.
-{acl, paying_customers, {user, "customer2", "example.com"}}.
-{acl, paying_customers, {user, "customer3", "example.org"}}.
+Moreover, the transport is only accessible to two users 
+of <TT>example.org</TT>, and any user of <TT>example.com</TT>:
+<PRE CLASS="verbatim">{acl, paying_customers, {user, "customer1", "example.org"}}.
+{acl, paying_customers, {user, "customer2", "example.org"}}.
+{acl, paying_customers, {server, "example.com"}}.
 
-{access, paying_customers, [{allow, paying_customers},
-                              {deny, all}]}.
+{access, irc_users, [{allow, paying_customers}, {deny, all}]}.
 
 {modules,
  [
   ...
-  {mod_irc, [{access, paying_customers},
+  {mod_irc, [{access, irc_users},
              {host, "irc.example.net"}]},
   ...
  ]}.
