@@ -1,3 +1,7 @@
+2008-11-12  Badlop  <badlop@process-one.net>
+
+	* doc/guide.tex: Improve legibility of mod_irc example config
+
 2008-11-10  Alexey Shchepin  <alexey@process-one.net>
 
 	* src/tls/tls_drv.c: Don't create a SSL context on every
